# ocaml-swagger

./: .gitignore  .ocamlformat  .travis.yml  Makefile  README.md  dune-project  dune-workspace  swagger.opam
experiment/: dune  main.ml
lib/: codegen_schema.ml  codegen_schema.mli  dune  gen.ml  mod.ml  mod.mli  param.ml  swagger.atd  swagger.ml  swagger.mli  swagger_util.ml  type.ml  type.mli  util.ml  val.ml  val.mli
src/: .merlin  codegen_schema.ml  codegen_schema.mli  dune  gen.ml  gen.mli  jbuild  mod.ml  mod.mli  param.ml  param.mli  patch.txt  schema.ml  schema.mli  sig_gen.ml  swagger.atd  swagger.ml  swagger.mli  swagger_util.ml  type.ml  type.mli  util.ml  val.ml  val.mli
test/: dune  petstore.expected.ml  petstore.json
test/allOf/: composition.expected.ml  composition.json  dune  polymorphism.json
test/docker/: dune  swagger.json  update.sh
test/kubernetes/: dune  update.sh
test/petstore/: dune  petstore.expected.ml
