(rule
 (targets swagger_j.ml swagger_j.mli)
 (deps swagger.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets swagger_t.ml swagger_t.mli)
 (deps swagger.atd)
 (action
  (run atdgen -t %{deps})))

(library
 (name swagger)
 (public_name swagger)
 (preprocess
  (pps ppxlib.metaquot))
 (libraries atdgen ppxlib re.pcre yojson))
