(rule
 (targets swagger_j.ml swagger_j.mli)
 (deps swagger.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets swagger_t.ml swagger_t.mli)
 (deps swagger.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets swagger_v.ml swagger_v.mli)
 (deps swagger.atd)
 (action
  (run atdgen -v %{deps})))

(library
 (name swagger)
 (public_name swagger)
 (libraries atdgen re.pcre yojson))
