(rule
 (targets swagger_j.ml swagger_j.mli)
 (deps swagger.atd)
 (action
  (run atdgen -j %{deps})))

(rule
 (targets swagger_t.ml swagger_t.mli)
 (deps swagger.atd)
 (action
  (run atdgen -t %{deps})))

(library
 (name swagger)
 (public_name swagger)
 (preprocess
  (pps ppxlib.metaquot))
 (libraries atdgen ppxlib re.pcre yojson)
 (modules
  Gen
  Mod
  Param
  Codegen_schema
  Swagger
  Swagger_j
  Swagger_t
  Swagger_util
  Type
  Util
  Val))

(executable
 (name main)
 (public_name ocaml-swagger)
 (libraries swagger)
 (modules main))
