(rule
 (deps
  (:gen %{bin:ocaml-swagger})
  (:json petstore.json))
 (target petstore.gen.ml)
 (action
  (run
   %{gen}
   -reference-base
   #/definitions/
   -reference-root
   Definitions
   %{json}
   -o
   %{target})))

(rule
 (deps petstore.gen.ml)
 (target petstore.ml)
 (action
  (run
   ocamlformat
   --impl
   --profile=default
   --ocaml-version=%{ocaml_version}
   --output=%{target}
   %{deps})))

(rule
 (alias runtest)
 (action
  (diff petstore.expected.ml petstore.ml)))

(library
 (name petstore)
 (preprocess
  (pps ppx_yojson_conv))
 (libraries cohttp-lwt-unix uri lwt ppx_yojson_conv re.pcre yojson)
 (modules petstore))

(test
 (name tests)
 (libraries petstore)
 (modules tests))
